# omda

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
demo/demo_01_shanghai_hotel/: results_all_in_one.md  run.py
demo/demo_02_pc_monitor/: options_raw.xlsx  options_v1.xlsx  pref_v1.xlsx  pref_v2.xlsx  r01_results.md  r02_results.md  run.py
demos/demo_01_shanghai_hotel/: options_v1.xlsx  pref_v1.xlsx  pref_v2.xlsx  results_all_in_one.md  run.py
demos/demo_02_pc_monitor/: options_v2.xlsx  r01_results.md  r02_results.md  run.py
omda/: .gitignore  __init__.py
src/omda/: __init__.py  core.py  methods.py  models.py  utils.py
